converted everything significant to display:flex whixh resolved the overlay issues on z-index

--- a/src/index.css
+++ b/src/index.css
@@ -102,3 +102,6 @@ form {
 form > * {
   margin: 0.5rem;
 }
+.all {
+  display:flex;
+}
